--- a/src/App.css
+++ b/src/App.css
@@ -3,24 +3,50 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 15rem;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:#8B0000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.2rem;
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.Margin {
+  margin: 2rem;
+}
+
+.Border {
+  border-radius: 2rem;
+}
+
+.Select {
+  font-size: 1.2rem;
+}
+
+.Link{
+  font-family: trebuchet;
+  color: yellow;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.Order{
+  background-color: white;
+  color: black;
+  margin: 1rem 15rem 2rem 15rem;
+  padding:0.5rem;
+  border-radius: 2rem;
+  font-weight: bold;
 }
 
 @keyframes App-logo-spin {
